--- a/recursos.html
+++ b/recursos.html
@@ -72,7 +72,7 @@
                 <form action="recursos.html" name="formconvertir" id="formconvertir" class="pt-4 col-auto mx-auto" method="post">
                     <div class="input-group">
                         <span class="input-group-text">Valor A convertir</span>
-                        <input type="number" class="form-control" min="1" id="Vconvertir" name="Vconvertir" placeholder="Ejemplo 200">
+                        <input type="number" class="form-control" min="1" id="Vconvertir" name="Vconvertir" placeholder="Ej 20">
                         <select class="form-select" name="select1" id="select1">
                 <option value="1">Byte</option>
                 <option value="1000"> kilobyte</option>
